Improves detection for TCL TV models and move TCL regexes before Philips (NETTV/)

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6678,3 +6678,21 @@
     model: 55D1240
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Zeasn/2.0 NETTV/4.5.0 Mozilla/5.0 (Linux;CE-HTML/1.0;U;en), Chrome/49.0.2623.87 Safari/537.36 AppleWebKit 537.36 (KHTML, like Gecko) Tbrowser/2.0, _TV_UNKONWN/V8-N563T01-LF1V196 (TCL,43S62FS,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 49.0.2623.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: TCL
+    model: 43S62FS
+  os_family: GNU/Linux
+  browser_family: Chrome
