--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11249,6 +11249,42 @@ Pentagram:
       model: '$1'
       device: 'smartphone'
 
+# Tcl
+TCL:
+  regex: 'TCL[_ -,][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T780H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T799B|Percee TV)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
+      model: 'Gala G60'
+    - regex: '5199I(?:[);/ ]|$)'
+      model: 'C9'
+    - regex: '5152D(?:[);/ ]|$)'
+      model: 'C5'
+    - regex: '5133A(?:[);/ ]|$)'
+      model: 'L5'
+    - regex: 'T780H(?:[);/ ]|$)'
+      model: 'Plex'
+    - regex: 'TCL[_ -]([^;/]+) Build'
+      model: '$1'
+    - regex: 'TCL[_ -]([a-z0-9]+)'
+      model: '$1'
+    - regex: '(7040N)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'A502DL(?:[);/ ]|$)'
+      model: 'LX'
+    - regex: '5159[AJ](?:[);/ ]|$)'
+      model: 'L9'
+    - regex: 'T770H(?:[);/ ]|$)'
+      model: '10L'
+    - regex: 'T799B(?:[);/ ]|$)'
+      model: '10 Pro'
+
+    - regex: '(Percee TV)(?:[);/ ]|$)'
+      device: 'tv'
+      model: '$1'
+    - regex: 'TCL,([a-z0-9]+)'
+      model: '$1'
+
 # philips
 Philips:
   regex: 'Philips|AND1E(?:[);/ ]|$)|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96|QM16[134]E|Xenium S[25]66|S397|W5510'
@@ -13712,40 +13748,6 @@ T-Mobile:
   models:
     - regex: 'Ignis ([89])'
       model: 'Ignis $1'
-
-# Tcl
-TCL:
-  regex: 'TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T780H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T799B|Percee TV)(?:[);/ ]|$)'
-  device: 'smartphone'
-  models:
-    - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
-      model: 'Gala G60'
-    - regex: '5199I(?:[);/ ]|$)'
-      model: 'C9'
-    - regex: '5152D(?:[);/ ]|$)'
-      model: 'C5'
-    - regex: '5133A(?:[);/ ]|$)'
-      model: 'L5'
-    - regex: 'T780H(?:[);/ ]|$)'
-      model: 'Plex'
-    - regex: 'TCL[_ -]([^;/]+) Build'
-      model: '$1'
-    - regex: 'TCL[_ -]([a-z0-9]+)'
-      model: '$1'
-    - regex: '(7040N)(?:[);/ ]|$)'
-      model: '$1'
-    - regex: 'A502DL(?:[);/ ]|$)'
-      model: 'LX'
-    - regex: '5159[AJ](?:[);/ ]|$)'
-      model: 'L9'
-    - regex: 'T770H(?:[);/ ]|$)'
-      model: '10L'
-    - regex: 'T799B(?:[);/ ]|$)'
-      model: '10 Pro'
-
-    - regex: '(Percee TV)(?:[);/ ]|$)'
-      device: 'tv'
-      model: '$1'
 
 # Teclast
 Teclast:
