Adds detection for JVC TV models

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11285,6 +11285,14 @@ TCL:
     - regex: 'TCL,([a-z0-9]+)'
       model: '$1'
 
+# JVC
+JVC:
+  regex: 'JVC'
+  device: 'tv'
+  models:
+    - regex: 'JVC,([a-z0-9]+)'
+      model: '$1'
+
 # philips
 Philips:
   regex: 'Philips|AND1E(?:[);/ ]|$)|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96|QM16[134]E|Xenium S[25]66|S397|W5510'
