--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6696,3 +6696,21 @@
     model: 43S62FS
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Zeasn/2.0 NETTV/4.5.0 Mozilla/5.0 (Linux;CE-HTML/1.0;U;en), Chrome/42.0.2311.152 Safari/537.36 AppleWebKit 537.36 (KHTML, like Gecko) Tbrowser/2.0, _TV_nt563/V8-NT563NA-LF1V278 (JVC,32D1290,wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 42.0.2311.152
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: JVC
+    model: 32D1290
+  os_family: GNU/Linux
+  browser_family: Chrome
