Improves detection for JVC TV models

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -104,6 +104,14 @@ Inverto:
     - regex: '(Volksbox Web Edition|Volksbox Essential|Volksbox II|Volksbox)'
       model: '$1'
 
+# JVC
+JVC:
+  regex: 'JVC'
+  device: 'tv'
+  models:
+    - regex: 'JVC; (MB[0-9]{3})'
+      model: '$1'
+
 # LG
 LG:
   regex: 'LGE'
