--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6714,3 +6714,21 @@
     model: 32D1290
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.130 Safari/537.36 OPR/31.0.1890.0 OMI/4.6.1.40.Dominik2.175 VSTVB MB100 HbbTV/1.2.1 (; JVC; MB110; 2.21.7.0; ;) SmartTvA/3.0.0
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.6.1.40
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: JVC
+    model: MB110
+  os_family: GNU/Linux
+  browser_family: Opera
