--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -66,6 +66,14 @@ Hisense:
     - regex: '(H[A-Z]?[0-9]{2}[A-Z][0-9]{3,4}[A-Z]{0,4})'
       model: '$1'
 
+# Hitachi
+Hitachi:
+  regex: 'Hitachi'
+  device: 'tv'
+  models:
+    - regex: 'Hitachi; (MB[0-9]{3})'
+      model: '$1'
+
 # Humax
 Humax:
   regex: 'Humax'
