Adds detection for Techwood TV models

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -276,6 +276,14 @@ TechnoTrend:
     - regex: '([A-Z]{1}-[0-9]{3})'
       model: '$1'
 
+# Techwood
+Techwood:
+  regex: 'Techwood'
+  device: 'tv'
+  models:
+    - regex: 'Techwood; (MB[0-9]{3})'
+      model: '$1'
+
 # Telefunken
 Telefunken:
   regex: 'Telefunken'
