--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6750,3 +6750,21 @@
     model: MB110
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.130 Safari/537.36 OPR/31.0.1890.0 OMI/4.6.1.40.Dominik2.191 VSTVB MB100 FVC/1.0 (TECHWOOD; MB110; ) HbbTV/1.3.1 (; TECHWOOD; MB110; 2.21.24.0; ;) SmartTvA/3.0.0
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.6.1.40
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Techwood
+    model: MB110
+  os_family: GNU/Linux
+  browser_family: Opera
