Adds detection for Digihome TV models

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6768,3 +6768,21 @@
     model: MB110
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.2125.122 Safari/537.36 OPR/25.0.1620.0 OMI/4.3.18.7.Dominik.0 VSTVB MB100 HbbTV/1.2.1 (; DIGIHOME; MB100; 0.1.33.17; ;) SmartTvA/3.0.0 UID(00:09:DF:DC:58:91/MB100/DIGIHOME/0.1.33.17)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.3.18.7
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Digihome
+    model: MB100
+  os_family: GNU/Linux
+  browser_family: Opera
