Adds detection for Finlux TV models

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -58,6 +58,14 @@ DMM:
   device: 'tv'
   model: 'Dreambox'
 
+# Finlux
+Finlux:
+  regex: 'FINLUX'
+  device: 'tv'
+  models:
+    - regex: 'FINLUX; (MB[0-9]{3})'
+      model: '$1'
+
 # Grundig
 Grundig:
   regex: '(OWB|Grundig|Arcelik)'
