Adds detection for X.Vision TV models

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -362,3 +362,11 @@ Videoweb:
       model: '$1'
     - regex: '(videowebtv)'
       model: 'VideoWeb TV'
+
+# X.Vision
+X.Vision:
+  regex: 'X-VISION'
+  device: 'tv'
+  models:
+    - regex: 'X-VISION; (MB[0-9]{3})'
+      model: '$1'
