Adds detection for Bush TV models

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -30,6 +30,14 @@ BangOlufsen:
   device: 'tv'
   model: 'BeoVision'
 
+# Bush
+Bush:
+  regex: 'BUSH'
+  device: 'tv'
+  models:
+    - regex: 'BUSH; (MB[0-9]{3})'
+      model: '$1'
+
 # Changhong
 Changhong:
   regex: 'Changhong'
