Adds detection for Luxor TV models

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -164,6 +164,14 @@ Loewe:
     - regex: '([A-Z]{2}[0-9]{3})'
       model: '$1'
 
+# Luxor
+Luxor:
+  regex: 'LUXOR'
+  device: 'tv'
+  models:
+    - regex: 'LUXOR; (MB[0-9]{3})'
+      model: '$1'
+
 # MediaTek
 MediaTek:
   regex: 'MTK'
