--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -224,6 +224,14 @@ Philips:
     - regex: 'NETTV/[0-9\.]{5}'
       model: 'NetTV Series'
 
+# Polaroid
+Polaroid:
+  regex: 'POLAROID'
+  device: 'tv'
+  models:
+    - regex: 'POLAROID; (MB[0-9]{3})'
+      model: '$1'
+
 # Salora
 Salora:
   regex: 'Salora'
