--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -156,6 +156,14 @@ LG:
     - regex: 'LGE;? ?([0-9]{2}[A-Z]{2}[0-9]{2,4}[A-Z]?)'
       model: '$1'
 
+# Linsar
+Linsar:
+  regex: 'LINSAR'
+  device: 'tv'
+  models:
+    - regex: 'LINSAR; (MB[0-9]{3})'
+      model: '$1'
+
 # Loewe
 Loewe:
   regex: 'Loewe'
