--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -196,6 +196,14 @@ Medion:
     - regex: '(MB[0-9]{2})'
       model: '$1'
 
+# Nordmende
+Nordmende:
+  regex: 'NORDMENDE'
+  device: 'tv'
+  models:
+    - regex: 'NORDMENDE; (MB[0-9]{3})'
+      model: '$1'
+
 # Metz
 Metz:
   regex: 'Metz'
