--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -64,7 +64,7 @@
     engine_version: "2.6.33"
   device:
     type: tv
-    brand: ""
+    brand: "Hotel"
     model: ""
   os_family: GNU/Linux
   browser_family: Opera
@@ -6691,7 +6691,7 @@
     engine: Blink
     engine_version: ""
   device:
-    type: smartphone
+    type: tv
     brand: TCL
     model: 43S62FS
   os_family: GNU/Linux
