Adds detection for SuperH architecture

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -37,7 +37,7 @@
   os:
     name: GNU/Linux
     version: ""
-    platform: ""
+    platform: SuperH
   client:
     type: browser
     name: Opera
@@ -55,7 +55,7 @@
   os:
     name: GNU/Linux
     version: ""
-    platform: ""
+    platform: SuperH
   client:
     type: browser
     name: Opera
