Adds detection for Celcus TV models

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -46,6 +46,14 @@ Bush:
     - regex: 'BUSH; (MB[0-9]{3})'
       model: '$1'
 
+# Celcus
+Celcus:
+  regex: 'CELCUS'
+  device: 'tv'
+  models:
+    - regex: 'CELCUS; (MB[0-9]{3})'
+      model: '$1'
+
 # Changhong
 Changhong:
   regex: 'Changhong'
