--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6948,3 +6948,21 @@
     model: MB120
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.2125.122 Safari/537.36 OPR/25.0.1620.0 OMI/4.3.18.7.Dominik.0 VSTVB MB100 HbbTV/1.2.1 (; CELCUS; MB100; 0.1.34.14; ;) SmartTvA/3.0.0 UID(00:09:DF:F4:02:D5/MB100/CELCUS/0.1.34.14)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.3.18.7
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Celcus
+    model: MB100
+  os_family: GNU/Linux
+  browser_family: Opera
