--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6639,7 +6639,7 @@
   device:
     type: tv
     brand: Salora
-    model: MB211
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6729,7 +6729,7 @@
   device:
     type: tv
     brand: JVC
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6747,7 +6747,7 @@
   device:
     type: tv
     brand: Hitachi
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6765,7 +6765,7 @@
   device:
     type: tv
     brand: Techwood
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6783,7 +6783,7 @@
   device:
     type: tv
     brand: Digihome
-    model: MB100
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6801,7 +6801,7 @@
   device:
     type: tv
     brand: Finlux
-    model: MB100
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6819,7 +6819,7 @@
   device:
     type: tv
     brand: X.Vision
-    model: MB100
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6837,7 +6837,7 @@
   device:
     type: tv
     brand: Bush
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6855,7 +6855,7 @@
   device:
     type: tv
     brand: Luxor
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6873,7 +6873,7 @@
   device:
     type: tv
     brand: Polaroid
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6891,7 +6891,7 @@
   device:
     type: tv
     brand: Linsar
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6909,7 +6909,7 @@
   device:
     type: tv
     brand: Nordmende
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6927,7 +6927,7 @@
   device:
     type: tv
     brand: Hotel
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6945,7 +6945,7 @@
   device:
     type: tv
     brand: ALDI SÜD
-    model: MB120
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -6963,6 +6963,6 @@
   device:
     type: tv
     brand: Celcus
-    model: MB100
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
