--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -18,11 +18,9 @@ Airties:
 
 # ALDI SÜD
 'ALDI SÜD':
-  regex: 'ALDISUED'
+  regex: 'ALDISUED[;,]'
   device: 'tv'
-  models:
-    - regex: 'ALDISUED; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Altech UEC
 'Altech UEC':
@@ -40,19 +38,15 @@ BangOlufsen:
 
 # Bush
 Bush:
-  regex: 'BUSH'
+  regex: 'BUSH[;,]'
   device: 'tv'
-  models:
-    - regex: 'BUSH; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Celcus
 Celcus:
-  regex: 'CELCUS'
+  regex: 'CELCUS[;,]'
   device: 'tv'
-  models:
-    - regex: 'CELCUS; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Changhong
 Changhong:
@@ -70,11 +64,9 @@ CreNova:
 
 # Digihome
 Digihome:
-  regex: 'DIGIHOME'
+  regex: 'DIGIHOME[;,]'
   device: 'tv'
-  models:
-    - regex: 'DIGIHOME; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # DMM
 DMM:
@@ -84,11 +76,9 @@ DMM:
 
 # Finlux
 Finlux:
-  regex: 'FINLUX'
+  regex: 'FINLUX[;,]'
   device: 'tv'
-  models:
-    - regex: 'FINLUX; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Grundig
 Grundig:
@@ -108,19 +98,15 @@ Hisense:
 
 # Hitachi
 Hitachi:
-  regex: 'Hitachi'
+  regex: 'Hitachi[;,]'
   device: 'tv'
-  models:
-    - regex: 'Hitachi; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Hotel
 Hotel:
-  regex: 'HOTEL'
+  regex: 'HOTEL[;,]'
   device: 'tv'
-  models:
-    - regex: 'HOTEL; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Humax
 Humax:
@@ -162,11 +148,9 @@ Inverto:
 
 # JVC
 JVC:
-  regex: 'JVC'
+  regex: 'JVC[;,]'
   device: 'tv'
-  models:
-    - regex: 'JVC; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # LG
 LG:
@@ -182,11 +166,9 @@ LG:
 
 # Linsar
 Linsar:
-  regex: 'LINSAR'
+  regex: 'LINSAR[;,]'
   device: 'tv'
-  models:
-    - regex: 'LINSAR; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Loewe
 Loewe:
@@ -198,11 +180,9 @@ Loewe:
 
 # Luxor
 Luxor:
-  regex: 'LUXOR'
+  regex: 'LUXOR[;,]'
   device: 'tv'
-  models:
-    - regex: 'LUXOR; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # MediaTek
 MediaTek:
@@ -222,11 +202,9 @@ Medion:
 
 # Nordmende
 Nordmende:
-  regex: 'NORDMENDE'
+  regex: 'NORDMENDE[;,]'
   device: 'tv'
-  models:
-    - regex: 'NORDMENDE; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Metz
 Metz:
@@ -266,19 +244,15 @@ Philips:
 
 # Polaroid
 Polaroid:
-  regex: 'POLAROID'
+  regex: 'POLAROID[;,]'
   device: 'tv'
-  models:
-    - regex: 'POLAROID; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Salora
 Salora:
-  regex: 'Salora'
+  regex: 'Salora[;,]'
   device: 'tv'
-  models:
-    - regex: 'Salora; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Samsung
 Samsung:
@@ -358,11 +332,9 @@ TechnoTrend:
 
 # Techwood
 Techwood:
-  regex: 'Techwood'
+  regex: 'Techwood[;,]'
   device: 'tv'
-  models:
-    - regex: 'Techwood; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Telefunken
 Telefunken:
@@ -429,8 +401,6 @@ Videoweb:
 
 # X.Vision
 X.Vision:
-  regex: 'X-VISION'
+  regex: 'X-VISION[;,]'
   device: 'tv'
-  models:
-    - regex: 'X-VISION; (MB[0-9]{3})'
-      model: '$1'
+  model: ''
