--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6650,8 +6650,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome
-    version: 49.0.2623.87
+    name: T-Browser
+    version: 2.0
     engine: Blink
     engine_version: ""
   device:
@@ -6668,8 +6668,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome
-    version: 42.0.2311.152
+    name: T-Browser
+    version: 2.0
     engine: Blink
     engine_version: ""
   device:
@@ -6686,8 +6686,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome
-    version: 49.0.2623.87
+    name: T-Browser
+    version: 2.0
     engine: Blink
     engine_version: ""
   device:
@@ -6704,8 +6704,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome
-    version: 42.0.2311.152
+    name: T-Browser
+    version: 2.0
     engine: Blink
     engine_version: ""
   device:
