feat(device) detect brand ZTE model: Blade A7 (2020)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16434,6 +16434,8 @@ ZTE:
       model: 'Blade A3 (2019)'
     - regex: 'Blade A7 2019-T(?:[);/ ]|$)'
       model: 'Blade A7 (2019)'
+    - regex: 'Blade A7 2020(?:[);/ ]|$)'
+      model: 'Blade A7 (2020)'
     - regex: 'Blade A5 2019-T(?:[);/ ]|$)'
       model: 'Blade A5 (2019)'
     - regex: 'BLADE A0622(?:[);/ ]|$)'
