--- a/Tests/fixtures/smartphone-20.yml
+++ b/Tests/fixtures/smartphone-20.yml
@@ -2299,3 +2299,19 @@
     model: Armor X7 Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 9; ZTE Blade A7 2020 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.101 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/300.2.0.58.129;]'
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 300.2.0.58.129
+  device:
+    type: smartphone
+    brand: ZTE
+    model: Blade A7 (2020)
+  os_family: Android
+  browser_family: Unknown
