feat(device) detect brand Mobicel model: Hype

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9646,7 +9646,7 @@ Mobiola:
 
 # Mobicel
 Mobicel:
-  regex: 'Mobicel_(R1)|(?:Matrix|TRENDY PLUS|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|(?:HYPE|Matrix|TRENDY PLUS|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -9661,6 +9661,8 @@ Mobicel:
       model: 'Berry Plus'
     - regex: 'TRENDY PLUS'
       model: 'Trendy Plus'
+    - regex: 'HYPE'
+      model: 'Hype'
     - regex: 'Mobicel_(R1)'
       model: '$1'
 
@@ -13990,10 +13992,10 @@ TechPad:
 
 # Tesco
 Tesco:
-  regex: 'Hudl ([^/;]+) Build|W032i-C3(?:[);/ ]|$)'
+  regex: 'Hudl (?:[^/;]+)(?: Build|[;)])|W032i-C3(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: 'Hudl ([^/;]+) Build'
+    - regex: 'Hudl ([^/;]+)(?: Build|[;)])'
       model: 'Hudl $1'
     - regex: 'W032i-C3(?:[);/ ]|$)'
       model: 'Op3n Dott'
