--- a/Tests/fixtures/smartphone-20.yml
+++ b/Tests/fixtures/smartphone-20.yml
@@ -2315,3 +2315,39 @@
     model: Blade A7 (2020)
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Hudl 2) AppleWebKit/537.36; (KHTML, like Gecko) Chrome/70.0.3538.110; Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 70.0.3538.110
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Tesco
+    model: Hudl 2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; HYPE Build/O11019; wv) AppleWebKit/537.36; (KHTML, like Gecko) Version/4.0; Chrome/67.0.3396.87 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 67.0.3396.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Mobicel
+    model: Hype
+  os_family: Android
+  browser_family: Chrome
