feat(os) detect FydeOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1658,3 +1658,10 @@
     short_name: WAS
     version: 3.2.2
     platform: ARM
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; FydeOS Android) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4128.0 Safari/537.36
+  os:
+    name: FydeOS
+    short_name: FYD
+    version: ""
+    platform: ""
