--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -94,6 +94,10 @@
   name: 'Fire OS'
   version: '$1'
 
+- regex: 'FydeOS'
+  name: 'FydeOS'
+  version: ''
+
 ##########
 # Android
 ##########
@@ -773,7 +777,6 @@
 - regex: 'CrOS [a-z0-9_]+ .* Chrome/(\d+[\.\d]+)'
   name: 'Chrome OS'
   version: '$1'
-
 
 ##########
 # BlackBerry
