feat(app) detect apps: Instapaper, Keeper Password Manager, WeChat Share Extension, Skyeng Teachers

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -245,3 +245,28 @@
     type: mobile app
     name: Twitter
     version: ""
+-
+  user_agent: Instapaper/7.8.3.3; CFNetwork/1128.0.1; Darwin/19.6.0
+  client:
+    type: mobile app
+    name: Instapaper
+    version: 7.8.3.3
+-
+  user_agent: Keeper/14.11.1.8605; CFNetwork/978.0.7; Darwin/18.7.0
+  client:
+    type: mobile app
+    name: Keeper Password Manager
+    version: 14.11.1.8605
+-
+  user_agent: WeChatShareExtensionNew/7.0.15.33; CFNetwork/1128.0.1; Darwin/19.6.0
+  client:
+    type: mobile app
+    name: WeChat Share Extension
+    version: 7.0.15.33;
+-
+  user_agent: Skyeng Teachers/17; CFNetwork/1128.0.1; Darwin/19.6.0
+  client:
+    type: mobile app
+    name: Skyeng Teachers
+    version: "17"
+
