update readme only every sunday and on request

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,8 +1,9 @@
 name: Update README.md
 
 on:
-  push:
-    branches: [ master ]
+  workflow_dispatch:
+  schedule:
+    - cron: "0 2 * * 0"
 
 jobs:
   build:
