--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -1538,7 +1538,7 @@
   device:
     type: smartphone
     brand: ZTE
-    model: Nubia Z11 mini S
+    model: Nubia Z11 Mini S
   os_family: Android
   browser_family: Chrome
 - 
@@ -1628,7 +1628,7 @@
   device:
     type: smartphone
     brand: ZTE
-    model: Nubia Z18 mini
+    model: Nubia Z18 Mini
   os_family: Android
   browser_family: Unknown
 - 
@@ -1718,7 +1718,7 @@
   device:
     type: smartphone
     brand: ZTE
-    model: Nubia Z9 max
+    model: Nubia Z9 Max
   os_family: Android
   browser_family: Chrome
 - 
@@ -1736,7 +1736,7 @@
   device:
     type: smartphone
     brand: ZTE
-    model: Nubia Z9 max dual
+    model: Nubia Z9 Max Dual
   os_family: Android
   browser_family: Chrome
 - 
@@ -1754,7 +1754,7 @@
   device:
     type: smartphone
     brand: ZTE
-    model: Nubia Z9 mini
+    model: Nubia Z9 Mini
   os_family: Android
   browser_family: Chrome
 - 
