--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -314,11 +314,11 @@
 ##########
 # tvOS (https://developer.apple.com/tvos/)
 ##########
-- regex: 'Apple TV.*CPU (?:iPhone )?OS ((?:9|10|11|12|13|14)_\d+(?:[_\.]\d+)*)'
+- regex: 'Apple TV.*CPU (?:iPhone )?OS ((?:9|1[0-4])_\d+(?:[_\.]\d+)*)'
   name: 'tvOS'
   version: '$1'
 
-- regex: 'iOS(?:; |/)((?:9|10|11|12|13|14).\d+(?:[_\.]\d+)*) (?:model/)?AppleTV'
+- regex: 'iOS(?:; |/)((?:9|1[0-4]).\d+(?:[_\.]\d+)*) (?:model/)?AppleTV'
   name: 'tvOS'
   version: '$1'
 
