--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2699,7 +2699,7 @@
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) chimlac_browser/1.0 Chrome/64.0.3282.140 Safari/537.36
   client:
     type: browser
-    name: Chim Lạc
+    name: Chim Lac
     version: "1.0"
     engine: Blink
     engine_version: ""
@@ -2707,7 +2707,7 @@
   user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.91 chimlac/73.0.3683.91 Safari/537.36
   client:
     type: browser
-    name: Chim Lạc
+    name: Chim Lac
     version: 73.0.3683.91
     engine: Blink
     engine_version: ""
