feat(device) detect brand Kyocera models: 2235, 2325, 5135, 7135, 2255, 2345, 6035, 3225

--- a/Tests/fixtures/smartphone-20.yml
+++ b/Tests/fixtures/smartphone-20.yml
@@ -1961,3 +1961,124 @@
     model: Z7
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: QC-2235/1.0.52 UP.Browser/4.1.22b1
+  os: [ ]
+  client:
+    type: browser
+    name: Openwave Mobile Browser
+    version: 4.1.22
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kyocera
+    model: "2235"
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: QC-2325/1.0.10 UP.Browser/4.1.25i
+  os: [ ]
+  client:
+    type: browser
+    name: Openwave Mobile Browser
+    version: 4.1.25
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kyocera
+    model: "2325"
+  os_family: Unknown
+  browser_family: Unknown
+
+-
+  user_agent: QC-5135/1.0.17 UP.Browser/4.1.22b1 UP.Link/4.2.1.8
+  os: [ ]
+  client:
+    type: browser
+    name: Openwave Mobile Browser
+    version: 4.1.22
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kyocera
+    model: "5135"
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: QC-7135/1.0.38 UP.Browser/4.1.25i
+  os: [ ]
+  client:
+    type: browser
+    name: Openwave Mobile Browser
+    version: 4.1.25
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kyocera
+    model: "7135"
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: QC-2255/1.0.08 UP.Browser/4.1.22b1
+  os: [ ]
+  client:
+    type: browser
+    name: Openwave Mobile Browser
+    version: 4.1.22
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kyocera
+    model: "2255"
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: QC-2345/1.0.10 UP.Browser/4.1.25i
+  os: [ ]
+  client:
+    type: browser
+    name: Openwave Mobile Browser
+    version: 4.1.25
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kyocera
+    model: "2345"
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: QC6035 UP.Browser/4.1.22b1
+  os: [ ]
+  client:
+    type: browser
+    name: Openwave Mobile Browser
+    version: 4.1.22
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kyocera
+    model: "6035"
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: QC-3225/1.0.46 UP.Browser/4.1.26l4
+  os: [ ]
+  client:
+    type: browser
+    name: Openwave Mobile Browser
+    version: 4.1.26
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kyocera
+    model: "3225"
+  os_family: Unknown
+  browser_family: Unknown
