--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2839,3 +2839,27 @@
     version: "2.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux) AppleWebKit/534.51 (KHTML, like Gecko) Ekioh/2.2.4.7-moto-mob Safari/534.51
+  client:
+    type: browser
+    name: Flow
+    version: 2.2.4.7
+    engine: Flow
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux) AppleWebKit/534.51 (KHTML, like Gecko) Ekioh/2.2.4.7-moto-mob Safari/534.51:534 Motorola KreaTV STB VIP1003
+  client:
+    type: browser
+    name: Flow
+    version: 2.2.4.7
+    engine: Flow
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_0) EkiohFlow/5.7.4.30559 Flow/5.7.4 (like Gecko Firefox/53.0 rv:53.0)
+  client:
+    type: browser
+    name: Flow
+    version: 5.7.4.30559
+    engine: Flow
+    engine_version: 5.7.4.30559
