--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,9 +5,8 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-
 # Flow (https://www.ekioh.com/)
-- regex: 'EkiohFlow/(?:(\d+[\.\d]+))?'
+- regex: 'Ekioh(?:Flow)?/(?:(\d+[\.\d]+))?'
   name: 'Flow'
   version: '$1'
   engine:
