--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -6,7 +6,7 @@
 ###############
 
 # Flow (https://www.ekioh.com/)
-- regex: 'Ekioh(?:Flow)?/(?:(\d+[\.\d]+))?'
+- regex: 'Ekioh(?:Flow)?/(?:(\d+[\.\d]+))'
   name: 'Flow'
   version: '$1'
   engine:
