--- a/Tests/fixtures/smartphone-20.yml
+++ b/Tests/fixtures/smartphone-20.yml
@@ -1973,7 +1973,7 @@
   device:
     type: smartphone
     brand: Kyocera
-    model: "2235"
+    model: "QC-2235"
   os_family: Unknown
   browser_family: Unknown
 -
@@ -1988,7 +1988,7 @@
   device:
     type: smartphone
     brand: Kyocera
-    model: "2325"
+    model: "QC-2325"
   os_family: Unknown
   browser_family: Unknown
 
@@ -2004,7 +2004,7 @@
   device:
     type: smartphone
     brand: Kyocera
-    model: "5135"
+    model: "QC-5135"
   os_family: Unknown
   browser_family: Unknown
 -
@@ -2019,7 +2019,7 @@
   device:
     type: smartphone
     brand: Kyocera
-    model: "7135"
+    model: "QC-7135"
   os_family: Unknown
   browser_family: Unknown
 -
@@ -2034,7 +2034,7 @@
   device:
     type: smartphone
     brand: Kyocera
-    model: "2255"
+    model: "QC-2255"
   os_family: Unknown
   browser_family: Unknown
 -
@@ -2049,7 +2049,7 @@
   device:
     type: smartphone
     brand: Kyocera
-    model: "2345"
+    model: "QC-2345"
   os_family: Unknown
   browser_family: Unknown
 -
@@ -2064,7 +2064,7 @@
   device:
     type: smartphone
     brand: Kyocera
-    model: "6035"
+    model: "QC-6035"
   os_family: Unknown
   browser_family: Unknown
 -
@@ -2079,6 +2079,6 @@
   device:
     type: smartphone
     brand: Kyocera
-    model: "3225"
+    model: "QC-3225"
   os_family: Unknown
   browser_family: Unknown
