--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7990,8 +7990,8 @@ Kyocera:
       model: 'KZ $1'
     - regex: 'Kyocera(?:[\-/])?([a-z0-9]+)'
       model: '$1'
-    - regex: '(?:KWC|QC)-?([a-z0-9]+)'
-      model: '$1'
+    - regex: '(KWC|QC)-?([a-z0-9]+)'
+      model: '$1-$2'
 
 # Krüger&Matz (Kruger&Matz)
 Krüger&Matz:
