--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2701,7 +2701,7 @@
     type: browser
     name: Flow
     version: 5.11.1.33219
-    engine: Flow
+    engine: EkiohFlow
     engine_version: 5.11.1.33219
 -
   user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.16 (KHTML, like Gecko) Chrome/20.0.1207.0 PlayFreeBrowser/2.2.0.0 Safari/537.16
