--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -10,7 +10,7 @@
   name: 'Flow'
   version: '$1'
   engine:
-    default: 'Flow'
+    default: 'EkiohFlow'
 
 # PlayFree Browser
 - regex: 'PlayFreeBrowser/(?:(\d+[\.\d]+))?'
